# sps_simpson

./: EXPLANATION.md  license  pyproject.toml  readme.md
src/sps-simpson/: core.py
src/sps_simpson/: __init__.py  core.py
src/sps_simpson.egg-info/: PKG-INFO
