[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sps-simpson"
version = "0.1.0"
description = "Fast SVD approximation for LLM matrices using Simpson index"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
]
keywords = ["svd", "llm", "compression", "linear-algebra", "matrix"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/yourusername/sps-simpson"
Repository = "https://github.com/yourusername/sps-simpson"
Documentation = "https://github.com/yourusername/sps-simpson#readme"

[project.scripts]
sps-analyze = "sps_simpson.cli:main"

[tool.setuptools.packages.find]
where = ["src"]